--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .bj-content {
-  @apply min-h-full-mobile sm:min-h-full bg-gray-100 text-gray-900 flex justify-center;
+  @apply min-h-full-mobile sm:min-h-full bg-gray-100 text-gray-900 flex justify-center font-body;
 }
 
 .bj-container{
@@ -23,7 +24,15 @@
 }
 
 .btn-round {
-  @apply rounded-full py-2 px-3 uppercase text-xs font-bold tracking-wider cursor-pointer border-2 transition ease-out duration-500;
+  @apply rounded-full py-2 px-3 uppercase text-xs font-bold tracking-wider cursor-pointer border-2 transition ease-out duration-500 hover:text-white;
+}
+
+.btn-search {
+  @apply py-2 px-3 uppercase text-xs font-bold tracking-wider cursor-pointer focus:outline-none hover:bg-indigo-600 hover:text-white;
+}
+
+.btn-text {
+  @apply text-gray-400 transform hover:text-primary hover:scale-110 focus:outline-none;
 }
 
 .input-field {
@@ -31,7 +40,7 @@
 }
 
 .active-navbar {
-  @apply font-bold text-base;
+  @apply font-bold text-base text-primary;
 }
 
 .tooltip {
