--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,7 @@
 }
 
 .btn-search {
-  @apply py-2 px-3 uppercase text-xs font-bold tracking-wider cursor-pointer focus:outline-none hover:bg-indigo-600 hover:text-white;
+  @apply py-2 px-3 uppercase text-xs font-bold tracking-wider cursor-pointer focus:outline-none hover:bg-gray-400 hover:text-white;
 }
 
 .btn-text {
