Add playLog edit / show

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,11 +4,11 @@
 @tailwind utilities;
 
 .bj-content {
-  @apply min-h-full-mobile sm:min-h-full bg-gray-100 text-gray-900 flex justify-center font-body;
+  @apply min-h-full-mobile sm:min-h-full bg-gray-100 text-gray-900 flex justify-center items-center font-body;
 }
 
 .bj-container{
-  @apply max-w-screen-xl m-0 lg:m-10 bg-white shadow sm:rounded-lg sm:overflow-hidden flex justify-center flex-1;
+  @apply max-w-screen-xl m-0 lg:m-10 bg-white shadow sm:rounded-lg sm:overflow-hidden flex justify-center;
 }
 
 .btn {
